Fix menu navigation icon on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -385,9 +385,6 @@ Navigation
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #FFF;
-    border-radius: 0;
-    width: 36px;
-    margin-bottom: 7px;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border: 0;
